@@ -47,14 +47,16 @@ clean:
 # Install to system
 install: bluelog livelog ouifile
 	mkdir -p $(DESTDIR)/usr/bin/
+	mkdir -p $(DESTDIR)/etc/$(APPNAME)/	
 	mkdir -p $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	mkdir -p $(DESTDIR)/usr/share/man/man1
 	mkdir -p $(DESTDIR)/usr/share/$(APPNAME)/
 	cp $(APPNAME) $(DESTDIR)/usr/bin/
+	cp bluelog.conf $(DESTDIR)/etc/$(APPNAME)/
 	cp -a $(DOCS) $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	gzip -c $(APPNAME).1 >> $(APPNAME).1.gz
 	cp $(APPNAME).1.gz $(DESTDIR)/usr/share/man/man1/
-	cp oui.txt $(DESTDIR)/usr/share/$(APPNAME)/
+	cp oui.txt $(DESTDIR)/etc/$(APPNAME)/
 	cp -a --no-preserve=ownership www/* $(DESTDIR)/usr/share/$(APPNAME)/
 	cd $(DESTDIR)/usr/share/$(APPNAME)/ ; ln -sf $(DEFAULT_CSS) style.css
 
@@ -101,6 +103,7 @@ uninstall:
 	rm -rf $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	rm -f $(DESTDIR)/usr/share/man/man1/$(APPNAME).1.gz
 	rm -rf $(DESTDIR)/usr/share/$(APPNAME)/
+	rm -rf $(DESTDIR)/etc/$(APPNAME)/
 	rm -f $(DESTDIR)/usr/bin/$(APPNAME)
 
 # Remove older versions
@@ -110,3 +113,4 @@ removeold:
 	rm -rf $(DESTDIR)/usr/share/$(APPNAME)*
 	rm -rf $(DESTDIR)/var/lib/$(APPNAME)*
 	rm -f $(DESTDIR)/usr/bin/$(APPNAME)
+	rm -rf $(DESTDIR)/etc/$(APPNAME)
